@@ -138,7 +138,7 @@ protected:
 
   virtual void do_process_histcontrol (const std::string&);
 
-  virtual std::string do_histcontrol (void) const;
+  virtual std::string do_histcontrol (void) const { return std::string (); }
 
   virtual void do_initialize (bool, const std::string&, int, const std::string&);
 
